search bar aligned

--- a/index.html
+++ b/index.html
@@ -4,18 +4,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table search</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+    </style>
   </head>
   <body>
-    <div>
-      <p class="name">Name</p>
-      <li>Jeunir Zuniega</li>
-      <li></li>
-      <li>Juan</li>
-      <li>Juan</li>
-      <li>Juan</li>
-      <p>Birthdate</p>
-      <p>Age</p>
-    </div>
+    <table class="content-table">
+      <div class="topnav">
+        <thead>
+          <th>
+            <input type="text" placeholder="Search.." />
+          </th>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Birthdate</th>
+            <th>Age</th>
+            <th>Contact Number</th>
+          </tr>
+        </thead>
+      </div>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Emily Johnson</td>
+          <td>April 15, 1990</td>
+          <td>34</td>
+          <td>+1-202-555-0131</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Michael Smith</td>
+          <td>June 23, 1985</td>
+          <td>39</td>
+          <td>+1-202-555-0175</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Olivia Martinez</td>
+          <td>February 9, 1992</td>
+          <td>32</td>
+          <td>+1-202-555-0147</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Daniel Brown</td>
+          <td>December 1, 1995</td>
+          <td>28</td>
+          <td>+1-202-555-0119</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>James Wilson</td>
+          <td>October 12, 1980</td>
+          <td>43</td>
+          <td>+1-202-555-0182</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>Isabella Garcia</td>
+          <td>July 19, 1993</td>
+          <td>31</td>
+          <td>+1-202-555-0154</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Benjamin Lee</td>
+          <td>March 30, 1988</td>
+          <td>36</td>
+          <td>+1-202-555-0126</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>Mia Taylor</td>
+          <td>November 11, 1991</td>
+          <td>32</td>
+          <td>+1-202-555-0198</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>Alexander White</td>
+          <td>May 25, 1984</td>
+          <td>40</td>
+          <td>+1-202-555-0142</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>Emily Johnson</td>
+          <td>April 15, 1990</td>
+          <td>34</td>
+          <td>+1-202-555-0131</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
-`
